--- a/style.css
+++ b/style.css
@@ -1,125 +1,147 @@
-/* Váriaveis */
-
-:root {
-  --cinza-fundo: #f7f7f7;
-  --cinza-texto: #c6c6c6;
-  --vermelho: #ee2211;
-  ---fonte: Arial;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  background-color: #f7f7f7;
+  display: grid;
+  gap: 60px;
+  justify-items: center;
+  margin-top: 60px;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
 
-/* Estilos */
+a {
+  text-decoration: none;
+}
 
-body {
-  font-family: var(---fonte);
-  background-color: var(--cinza-fundo);
+ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+p, h1, h2, h3 {
+  margin: 0px;
 }
 
 p {
-  font-size: 20px;
+  font-size: 1.25rem;
+  line-height: 1.3;
 }
 
-.nav {
-  padding: 35px 0px 35px 0px;
+.header {
+  display: grid;
+  justify-items: center;
+  gap: 60px;
 }
 
-.logo {
-  text-align: center;
-  padding-bottom: 40px;
-}
-
-.nav-flexbox {
+.menu {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
-  list-style-type: none;
   justify-content: center;
 }
 
-.nav-flexbox a {
-  text-transform: uppercase;
-  text-decoration: none;
-  background-color: white;
-  padding: 10px 20px;
-  border-radius: 5px;
+.menu a {
+  display: block;
+  background: white;
+  padding: 1rem 2rem;
+  border-radius: 4px;
   color: black;
-}
-
-.nav-flexbox a:hover {
   text-transform: uppercase;
-  text-decoration: none;
-  background-color: var(--vermelho);
-  padding: 10px 20px;
-  border-radius: 5px;
-  color: white;
+  border: 2px solid white;
 }
 
-.grid {
+.menu a:hover {
+  border-color: #e21;
+}
+
+.conteudo {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: white;
   max-width: 1000px;
-  margin: auto;
-  place-items: center;
 }
 
-.main {
+.introducao {
   background-color: white;
+  padding: 40px;
+  text-align: right;
+  position: relative;
+  display: grid;
+  gap: 20px;
+  align-content: center;
+  justify-items: end;
 }
 
-.info {
-  padding: 50px;
-  text-align: end;
+.introducao h1 {
+  font-size: 2rem;
 }
 
-.descricao {
-  padding-bottom: 15px;
+.introducao::before {
+  content: "";
+  width: 60px;
+  height: 4px;
+  background-color: #e21;
+  position: absolute;
+  top: 30px;
+  right: -30px;
 }
 
-.main-image {
-  max-width: 100%;
-}
-
-.botao-saiba {
-  background-color: var(--vermelho);
-  padding: 15px 20px;
+.botao {
+  background-color: #e21;
+  color: white;
+  padding: 1rem 2rem;
   border-radius: 4px;
-  color: var(--cinza-fundo);
-  text-decoration: none;
   text-transform: uppercase;
 }
 
-.div-texto-grande {
-  background: var(--cinza-fundo);
-  height: 100%;
-  text-align: end;
+.botao:hover {
+  background-color: #900;
 }
 
-.texto-grande {
-  font-size: 64px;
-  color: var(--cinza-texto);
+.subtitulo {
+  background: url("/img/onda.svg");
+  font-size: 4rem;
   text-transform: uppercase;
-  padding: 25px;
+  color: rgba(0, 0, 0, 0.2);
+  text-align: right;
+  padding: 40px;
+  align-self: center;
 }
 
-.flex {
-  padding: 60px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.titulo-menu {
-  font-weight: bold;
-}
-
-.descricao-menu {
-  margin: 0px 40px;
-}
-
-footer {
+.vantagens {
   background-color: white;
-  text-align: center;
-  padding: 20px;
-  margin-top: 50px;
+  padding: 40px;
 }
+
+.vantagens-item {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 10px 20px;
+  padding: 20px;
+}
+
+.vantagens-item:nth-child(odd) {
+  background-color: #f7f7f7;
+}
+
+
+.vantagens-item:hover {
+  border-left: 4px solid red;
+}
+
+.vantagens-item p {
+  grid-column: 2;
+}
+
+.rodape {
+  background-color: white;
+  width: 100%;
+  text-align: center;
+  padding: 40px;
+  box-sizing: border-box;
+}
+
